[package]
name = "paste"
version = "0.1.0"
authors = ["sourtaste000"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version = "2.0.0", features = ["json", "charset"]}
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
serde_json = "1.0.59"